package hse.kpo.service;

import static java.lang.Integer.parseInt;

import java.nio.charset.StandardCharsets;
import java.time.LocalDate;
import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;
import java.util.ArrayList;
import java.util.Comparator;
import java.util.IntSummaryStatistics;
import java.util.LinkedHashMap;
import java.util.List;
import java.util.Map;
import java.util.regex.Matcher;
import java.util.regex.Pattern;
import java.util.stream.Collectors;
import hse.kpo.grpc.ReportResponse;
import hse.kpo.grpc.ReportServiceGrpc;
import hse.kpo.tg.NotificationBot;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.springframework.beans.factory.annotation.Value;
import org.springframework.scheduling.annotation.Scheduled;
import org.springframework.stereotype.Service;
import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
import software.amazon.awssdk.core.sync.RequestBody;
import software.amazon.awssdk.services.s3.S3Client;
import software.amazon.awssdk.services.s3.model.GetObjectRequest;
import software.amazon.awssdk.services.s3.model.HeadObjectRequest;
import software.amazon.awssdk.services.s3.model.PutObjectRequest;
import software.amazon.awssdk.services.s3.model.S3Exception;

@Slf4j
@Service
@RequiredArgsConstructor
public class NotificationService {

    private final ReportServiceGrpc.ReportServiceBlockingStub reportService;
    private final NotificationBot notificationBot;
    private final S3Client s3Client;

    @Value("${aws.s3.bucket.name}")
    private String bucketName;

    @Scheduled(fixedRate = 60_000)  // –ö–∞–∂–¥—É—é –º–∏–Ω—É—Ç—É
    public void checkSalesAndNotify() {
        log.warn("getting report");
        ReportResponse report = reportService.getLatestReport(null);
        parseAndSendNotifications(report.getContent());

        saveReportToS3(report.getContent());
    }

    private void parseAndSendNotifications(String reportContent) {
        // –û—Ç–¥–µ–ª—è–µ–º —Å–µ–∫—Ü–∏—é —Å –ø–æ–∫—É–ø–∞—Ç–µ–ª—è–º–∏ –æ—Ç –æ–ø–µ—Ä–∞—Ü–∏–π
        String[] parts = reportContent.split("–û–ø–µ—Ä–∞—Ü–∏—è: ");
        String customersSection = parts[0];

        // –ò–∑–≤–ª–µ–∫–∞–µ–º –≤—Å–µ—Ö –ø–æ–∫—É–ø–∞—Ç–µ–ª–µ–π
        List<CustomerData> customers = new ArrayList<>();
        Pattern customerPattern = Pattern.compile("Customer\\{([^}]+)\\}");
        Matcher matcher = customerPattern.matcher(customersSection);

        while (matcher.find()) {
            String customerData = matcher.group(1);
            customers.add(parseCustomer(customerData));
        }

        // –ü–∞—Ä—Å–∏–º –æ–ø–µ—Ä–∞—Ü–∏–∏ –ø—Ä–æ–¥–∞–∂
        int totalSales = parts.length - 1; // –ü–µ—Ä–≤–∞—è —á–∞—Å—Ç—å - –Ω–µ –æ–ø–µ—Ä–∞—Ü–∏—è

        // –§–æ—Ä–º–∏—Ä—É–µ–º —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É
        Map<String, CustomerData> customerMap = new LinkedHashMap<>();
        int validCount = 0, invalidCount = 0;

        for (CustomerData customer : customers) {
            if (customer.isValid()) {
                customerMap.merge(customer.name(), customer, (old, neu) -> neu);
                validCount++;
            } else {
                invalidCount++;
            }
        }

        IntSummaryStatistics legStats = customers.stream()
            .filter(CustomerData::isValid)
            .mapToInt(CustomerData::legPower)
            .summaryStatistics();

        IntSummaryStatistics handStats = customers.stream()
            .filter(CustomerData::isValid)
            .mapToInt(CustomerData::handPower)
            .summaryStatistics();

        IntSummaryStatistics iqStats = customers.stream()
            .filter(CustomerData::isValid)
            .mapToInt(CustomerData::iq)
            .summaryStatistics();

        long totalCars = customers.stream()
            .filter(CustomerData::isValid)
            .mapToInt(CustomerData::carsCount)
            .sum();

        long totalCatamarans = customers.stream()
            .filter(CustomerData::isValid)
            .mapToInt(CustomerData::catamaransCount)
            .sum();

        long totalTransport = totalCars +totalCatamarans;

        List<CustomerData> suspicious = customers.stream()
            .filter(c -> c.legPower() > 1000 || c.handPower() > 1000 || c.iq() > 300)
            .toList();

        var topByTransport = customers.stream().sorted(Comparator.comparing(CustomerData::carsCount).reversed()).toList();

        // –§–æ—Ä–º–∏—Ä—É–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ
        StringBuilder message = new StringBuilder()
            .append("üè™ *–î–µ—Ç–∞–ª—å–Ω—ã–π –æ—Ç—á–µ—Ç –æ –ø—Ä–æ–¥–∞–∂–∞—Ö*\n")
            .append(String.format("üìÖ %s%n%n", LocalDate.now()))

            // –û—Å–Ω–æ–≤–Ω–∞—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞
            .append("üìä *–û—Å–Ω–æ–≤–Ω—ã–µ –ø–æ–∫–∞–∑–∞—Ç–µ–ª–∏:*\n")
            .append(String.format("üí∞ –í—Å–µ–≥–æ –ø—Ä–æ–¥–∞–∂: %d%n", totalSales))
            .append(String.format("üë§ –£–Ω–∏–∫–∞–ª—å–Ω—ã—Ö –∫–ª–∏–µ–Ω—Ç–æ–≤: %d%n", customerMap.size()))
            .append(String.format("üöò –í—Å–µ–≥–æ —Ç—Ä–∞–Ω—Å–ø–æ—Ä—Ç–∞: %d%n", totalTransport))
            .append(String.format("‚úÖ –ö–æ—Ä—Ä–µ–∫—Ç–Ω—ã–µ –∑–∞–ø–∏—Å–∏: %d%n", validCount))
            .append(String.format("‚ö†Ô∏è –ù–µ–∫–æ—Ä—Ä–µ–∫—Ç–Ω—ã–µ –∑–∞–ø–∏—Å–∏: %d%n%n", invalidCount))

            // –§–∏–∑–∏—á–µ—Å–∫–∏–µ –ø–æ–∫–∞–∑–∞—Ç–µ–ª–∏
            .append("üèãÔ∏è *–§–∏–∑–∏—á–µ—Å–∫–∏–µ —Ö–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫–∏:*\n")
            .append(String.format("ü¶µ –°–∏–ª–∞ –Ω–æ–≥: √ò%.1f (min: %d, max: %d)%n",
                legStats.getAverage(), legStats.getMin(), legStats.getMax()))
            .append(String.format("üí™ –°–∏–ª–∞ —Ä—É–∫: √ò%.1f (min: %d, max: %d)%n",
                handStats.getAverage(), handStats.getMin(), handStats.getMax()))
            .append(String.format("üß† IQ: √ò%.1f (min: %d, max: %d)%n%n",
                iqStats.getAverage(), iqStats.getMin(), iqStats.getMax()))

            // –†–∞—Å–ø—Ä–µ–¥–µ–ª–µ–Ω–∏–µ —Ç—Ä–∞–Ω—Å–ø–æ—Ä—Ç–∞
            .append("üöò *–†–∞—Å–ø—Ä–µ–¥–µ–ª–µ–Ω–∏–µ —Ç—Ä–∞–Ω—Å–ø–æ—Ä—Ç–∞:*\n")
            .append(String.format("üöó –ê–≤—Ç–æ–º–æ–±–∏–ª–∏: %d (%.1f%%)%n",
                totalCars, (totalCars * 100.0) / totalTransport))
            .append(String.format("üö§ –ö–∞—Ç–∞–º–∞—Ä–∞–Ω—ã: %d (%.1f%%)%n%n",
                totalCatamarans, (totalCatamarans * 100.0) / totalTransport))

            // –¢–æ–ø—ã
            .append("üèÜ *–¢–æ–ø –∫–ª–∏–µ–Ω—Ç–æ–≤:*\n")
            .append("ü•á –õ—É—á—à–∏–π –ø–æ–∫—É–ø–∞—Ç–µ–ª—å: ")
            .append(!topByTransport.isEmpty()
                ? topByTransport.getFirst().name()
                : "No customers")
            .append("\n")
            .append("üîù –¢–æ–ø-3 –ø–æ –∞–≤—Ç–æ:\n")
            .append(topByTransport.stream()
                .limit(3)
                .map(c -> String.format("‚ñ´ %s: %d –∞–≤—Ç–æ", c.name(), c.carsCount()))
                .collect(Collectors.joining("\n")))
            .append("\n\n")

            // –ê–Ω–æ–º–∞–ª–∏–∏
            .append("üö® *–ü–æ–¥–æ–∑—Ä–∏—Ç–µ–ª—å–Ω—ã–µ –∑–∞–ø–∏—Å–∏:*\n")
            .append(suspicious.isEmpty() ? "‚ÑπÔ∏è –ù–µ—Ç –∞–Ω–æ–º–∞–ª–∏–π" :
                suspicious.stream()
                    .map(c -> String.format(
                        "‚ñ´ %s (üö©–ù–æ–≥–∏:%d üö©–†—É–∫–∏:%d üö©IQ:%d)",
                        c.name(), c.legPower(), c.handPower(), c.iq()))
                    .collect(Collectors.joining("\n")))
            .append("\n\n")

            // –ó–∞–∫–ª—é—á–µ–Ω–∏–µ
            .append("üìà *–≠—Ñ—Ñ–µ–∫—Ç–∏–≤–Ω–æ—Å—Ç—å –ø—Ä–æ–¥–∞–∂:*\n")
            .append(String.format("üì¶ –ü—Ä–æ–¥–∞–∂/–∫–ª–∏–µ–Ω—Ç: √ò%.1f",
                (double) totalSales / customerMap.size()));

        sendToTelegram(message.toString());
    }

    private CustomerData parseCustomer(String raw) {
        try {
            String name = extractValue(raw, "name='([^']+)");
            int legPower = parseInt(extractValue(raw, "legPower=([\\d-]+)"));
            int handPower = parseInt(extractValue(raw, "handPower=([\\d-]+)"));
            int iq = parseInt(extractValue(raw, "iq=([\\d-]+)"));

            // –ü–∞—Ä—Å–∏–º –∞–≤—Ç–æ–º–æ–±–∏–ª–∏
            String carsStr = extractValue(raw, "cars=\\[([^]]+)]");
            int carsCount = carsStr == null ? 0 : carsStr.split(",").length;

            // –ü–∞—Ä—Å–∏–º –∫–∞—Ç–∞–º–∞—Ä–∞–Ω—ã
            boolean hasCatamaran = !raw.contains("catamaran=null");

            return CustomerData.createValid(
                name,
                legPower,
                handPower,
                iq,
                carsCount,
                hasCatamaran ? 1 : 0
            );
        } catch (Exception e) {
            return CustomerData.INVALID;
        }
    }

    private void sendToTelegram(String message) {
        log.warn("sending to tg");
        SendMessage sendMessage = new SendMessage(
            notificationBot.getChatId(),
            message
        );
        try {
            notificationBot.execute(sendMessage);
        } catch (TelegramApiException e) {
            e.printStackTrace();
        }
    }

    private String extractValue(String input, String regex) {
        Pattern pattern = Pattern.compile(regex);
        Matcher matcher = pattern.matcher(input);
        return matcher.find() ? matcher.group(1).trim() : null;
    }

    private void saveReportToS3(String reportContent) {
        try {
            // –§–æ—Ä–º–∞—Ç–∏—Ä—É–µ–º –≤—Ä–µ–º—è –¥–ª—è –∑–∞–ø–∏—Å–∏
            String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
            String entry = String.format("\n\n=== [%s] ===\n%s", timestamp, reportContent);

            // –§–æ—Ä–º–∏—Ä—É–µ–º –∏–º—è —Ñ–∞–π–ª–∞ (–ø–æ –¥–∞—Ç–µ)
            String fileName = "reports/" + LocalDateTime.now().format(DateTimeFormatter.ISO_DATE) + ".txt";

            // –ü–æ–ª—É—á–∞–µ–º —Å—É—â–µ—Å—Ç–≤—É—é—â–∏–π –∫–æ–Ω—Ç–µ–Ω—Ç –∏–ª–∏ —Å–æ–∑–¥–∞–µ–º –Ω–æ–≤—ã–π
            String fullContent = getExistingReportContent(fileName) + entry;

            // –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤ S3
            s3Client.putObject(
                PutObjectRequest.builder()
                    .bucket(bucketName)
                    .key(fileName)
                    .contentType("text/plain")
                    .build(),
                RequestBody.fromString(fullContent)
            );

            log.info("Report saved to S3: s3://{}/{}", bucketName, fileName);
        } catch (Exception e) {
            log.error("Error saving report to S3", e);
        }
    }

    private String getExistingReportContent(String fileName) {
        try {
            // –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å—É—â–µ—Å—Ç–≤–æ–≤–∞–Ω–∏–µ —Ñ–∞–π–ª–∞
            s3Client.headObject(HeadObjectRequest.builder()
                .bucket(bucketName)
                .key(fileName)
                .build());

            // –ï—Å–ª–∏ —Ñ–∞–π–ª —Å—É—â–µ—Å—Ç–≤—É–µ—Ç - –∑–∞–≥—Ä—É–∂–∞–µ–º —Å–æ–¥–µ—Ä–∂–∏–º–æ–µ
            return s3Client.getObjectAsBytes(GetObjectRequest.builder()
                    .bucket(bucketName)
                    .key(fileName)
                    .build())
                .asString(StandardCharsets.UTF_8);
        } catch (S3Exception e) {
            if (e.statusCode() == 404) {
                // –§–∞–π–ª –Ω–µ —Å—É—â–µ—Å—Ç–≤—É–µ—Ç - –≤–æ–∑–≤—Ä–∞—â–∞–µ–º –∑–∞–≥–æ–ª–æ–≤–æ–∫
                return "=== Daily Sales Report ==="
                    + "\nDate: " + LocalDateTime.now().format(DateTimeFormatter.ISO_DATE)
                    + "\n===================================";
            }
            throw new RuntimeException("S3 error: " + e.getMessage(), e);
        }
    }
}